--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,6 @@
                 class="w-full py-4 rounded-xl bg-gradient-to-r from-primary to-accent text-white font-bold text-lg hover:opacity-90 transition-opacity shadow-lg shadow-primary/25">
                 Otwórz Formularz Kontaktowy
             </button>
-        </div> <!-- End of form container replacement -->
         </div>
     </section>
 
@@ -1121,19 +1120,22 @@
                                 pieniądze. Otrzymasz gotowy plan działania - bez żadnych zobowiązań.</p>
                         </div>
 
-                        <form class="space-y-6">
+                        <form action="https://api.web3forms.com/submit" method="POST" class="space-y-6">
+                            <input type="hidden" name="access_key" value="fe91fdb3-2491-4463-8b53-77ab7adef895">
+                            <input type="hidden" name="subject" value="Nowe zgłoszenie z Fluinty">
+                            
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
                                     <label for="modal-name" class="block text-sm font-medium text-text-main mb-2">Imię i
                                         Nazwisko</label>
-                                    <input type="text" id="modal-name"
+                                    <input type="text" id="modal-name" name="name" required
                                         class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3 text-text-main focus:outline-none focus:border-primary/50 transition-colors"
                                         placeholder="Jan Kowalski">
                                 </div>
                                 <div>
                                     <label for="modal-email" class="block text-sm font-medium text-text-main mb-2">Email
                                         Firmowy</label>
-                                    <input type="email" id="modal-email"
+                                    <input type="email" id="modal-email" name="email" required
                                         class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3 text-text-main focus:outline-none focus:border-primary/50 transition-colors"
                                         placeholder="jan@firma.pl">
                                 </div>
@@ -1141,7 +1143,7 @@
                             <div>
                                 <label for="modal-message" class="block text-sm font-medium text-text-main mb-2">O czym
                                     chcesz porozmawiać?</label>
-                                <textarea id="modal-message" rows="4"
+                                <textarea id="modal-message" name="message" rows="4" required
                                     class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3 text-text-main focus:outline-none focus:border-primary/50 transition-colors"
                                     placeholder="Opisz krótko swój proces..."></textarea>
                             </div>
@@ -1155,8 +1157,6 @@
             </div>
         </div>
     </div>
-    </div>
-    </section>
 
     <!-- Footer -->
     <footer class="bg-surface border-t border-white/5 py-12">
