--- a/pages/case-study-art-tim.html
+++ b/pages/case-study-art-tim.html
@@ -88,7 +88,9 @@
             </h1>
 
             <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-                Kompleksowy system eliminujący ryzyko strat finansowych i zapewniający 100% kontrolę nad pojazdami.
+                Dzięki zautomatyzowanemu systemowi zarządzania flotą udało się wyeliminować ryzyko kar za przegapione
+                terminy i niezgłoszone relokacje do ubezpieczyciela, zapewnić automatyczne powiadomienia o zmianach
+                lokalizacji oraz zaoszczędzić dziesiątki godzin miesięcznie.
             </p>
         </div>
     </section>
@@ -229,21 +231,29 @@
                 <!-- Previous -->
                 <a href="case-study-eticod.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
-                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
-                        <i data-lucide="arrow-left" class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
+                    <div
+                        class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
+                        <i data-lucide="arrow-left"
+                            class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
                         Poprzednia realizacja
                     </div>
-                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Eticod</h3>
+                    <h3
+                        class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
+                        Eticod</h3>
                 </a>
 
                 <!-- Next -->
                 <a href="case-study-pups-choice.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-right">
-                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
+                    <div
+                        class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
                         Następna realizacja
-                        <i data-lucide="arrow-right" class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
+                        <i data-lucide="arrow-right"
+                            class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
                     </div>
-                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Pup's Choice</h3>
+                    <h3
+                        class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
+                        Pup's Choice</h3>
                 </a>
             </div>
         </div>
